ci(perf): add trusted paired JMH A/B gate (#55)
Add a base-owned, label-gated paired JMH A/B workflow with A/A noise validation, protected benchmark surfaces, isolated evidence collection, statistical guardrails, and standard Paper live-evidence tooling.